@@ -1,11 +1,12 @@
 Version 0.3.1
-Date 08/Apr/2015
+Date 13/Apr/2015
 Notes
 1. New API endpoints "/usage/users/{user_id}" & "/usage/resources/{resource_id}".
 2. Upgraded the "/usage" API to read/update the selected resource list dynamically
 3. Updated the usage response for a user to include the non aggregated data for cumulative meters from OpenStack
 4. Updated the the keystone query URL
-5. Bug fixes
+5. Upgraded the usage API for resources to handle gauge and cumulative meters from openstack
+6. Bug fixes
 
 ************************************************************
 
